fix: update controllers to align with ListingStatus workflow